--- a/SS_lab1.ipynb
+++ b/SS_lab1.ipynb
@@ -466,7 +466,7 @@
         "        return y_pred\n",
         "\n",
         "def cross_val_clf(clf, X, y):\n",
-        "    scores = cross_val_score(estimator=clf, X=X_train, y=y_train, cv=5, scoring='f1')\n",
+        "    scores = cross_val_score(estimator=clf, X=X, y=y, cv=5, scoring='f1')\n",
         "    df_scores = pd.DataFrame({'Srocc Val Scores (F1)': scores}, index=['1', '2', '3', '4', '5'])\n",
         "    print(df_scores)\n",
         "    print('Average:\\t%0.3f\\n' % np.mean(scores))"
