--- a/SS_lab2.ipynb
+++ b/SS_lab2.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMwSzSKIIvi85pdSuDA89uo",
+      "authorship_tag": "ABX9TyM9PPQlZaPeqPDwIOWjxD8v",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -563,7 +563,7 @@
         "id": "TaLLlmsei-it"
       },
       "source": [
-        "## Naive Baies (uselsess)\n",
+        "## Naive Baies\n",
         "\n"
       ]
     },
