Создано с помощью Colaboratory

--- a/SS_lab2.ipynb
+++ b/SS_lab2.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM9PPQlZaPeqPDwIOWjxD8v",
+      "authorship_tag": "ABX9TyNJL0fXM45n+J2gh6vrQ8aQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -256,47 +256,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "gd5NqVLik0eo",
-        "outputId": "72163335-a47a-49bd-faae-57ee4d46a1b9"
-      },
-      "source": [
-        "tree = ET.parse(path + book3)\n",
-        "root = tree.getroot()\n",
-        "\n",
-        "count = 0\n",
-        "for snt in root.findall('sentence/pause'):\n",
-        "    count += 1\n",
-        "    \n",
-        "print(count)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "19242\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "QJ1sz4LxM6JZ"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "PvRXn9cAmDPr"
       },
       "source": [
@@ -404,9 +363,6 @@
         "\n",
         "    print('\\nConfusion matrix:\\n', pd.DataFrame(metrics.confusion_matrix(y_test, y_pred)))\n",
         "\n",
-        "    #metrics.plot_confusion_matrix(clf, X_test, y_test, values_format='d')\n",
-        "    #plt.show()\n",
-        "\n",
         "    return y_pred\n",
         "\n",
         "def cross_val_clf(clf, X, y, metric='f1'):\n",
@@ -449,9 +405,6 @@
         "outputId": "fd6c8198-89af-468f-f283-94a4bca282cd"
       },
       "source": [
-        "# критерий разделения, максимальная глубина дерева, минимальное число объектов в листе, максимальное число листьев\n",
-        "#tree = DecisionTreeClassifier(criterion='entropy', max_depth=5, min_samples_leaf=5, max_leaf_nodes=100) \n",
-        "#tree = DecisionTreeClassifier(criterion='entropy', max_depth=7, min_samples_leaf=15, max_leaf_nodes=25)\n",
         "tree = DecisionTreeClassifier()\n",
         "    \n",
         "cross_val_clf(tree, X_train, y_train)\n",
@@ -751,7 +704,11 @@
         "id": "72hqNUnYmcsr"
       },
       "source": [
-        "## Учитывая нулевой класс"
+        "## Учитывая нулевой класс\r\n",
+        "\r\n",
+        "Для каждого классификатора:\r\n",
+        "1. Классификация по типу паузы\r\n",
+        "2. Классификация по типу интонационного контура"
       ]
     },
     {
@@ -775,10 +732,10 @@
       "source": [
         "tree_2 = DecisionTreeClassifier()\n",
         "    \n",
-        "cross_val_clf(tree_2, X_train, y_ps_train, metric='f1_macro') # f1_weighted\n",
+        "cross_val_clf(tree_2, X_train, y_ps_train, metric='f1_macro')\n",
         "\n",
         "tree_2 = fit_clf(tree_2, X_train, y_ps_train)\n",
-        "y_pred = predict_clf(tree_2, X_test, y_ps_test, metric='macro') # weighted"
+        "y_pred = predict_clf(tree_2, X_test, y_ps_test, metric='macro')"
       ],
       "execution_count": null,
       "outputs": [
@@ -1153,7 +1110,7 @@
         "id": "UooM6gSvtMsu"
       },
       "source": [
-        "### Logistic Regression (useless)"
+        "### Logistic Regression"
       ]
     },
     {
@@ -1851,27 +1808,14 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "CsT619wWradZ"
-      },
-      "source": [
-        "Вариант с классификаторами, обученных на одинаковых данных\n",
-        "\n",
-        "1. **Случайный лес** (расстановка пауз)\n",
-        "2. Определение длительности паузы --- **Случайный лес** или Дерево решений\n",
-        "3. Определение интонационного контура --- Дерево решений"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "N6_m4rYnrz1V"
       },
       "source": [
         "Вариант, со специально обученными классификаторами\n",
         "\n",
-        "1. Random Forest\n",
-        "2. Naive Baies \n",
-        "3. Decision Tree"
+        "1. Random Forest (определение места паузы)\n",
+        "2. Naive Baies (определение типа паузы)\n",
+        "3. Decision Tree (определение интонационного контура)"
       ]
     },
     {
@@ -1939,6 +1883,18 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZciZGGGtAzur"
+      },
+      "source": [
+        "Результаты:\r\n",
+        "1. Определение места паузы\r\n",
+        "2. Определение типа паузы\r\n",
+        "3. Определение интонационного контура"
+      ]
     },
     {
       "cell_type": "code",
