Создано с помощью Colaboratory

--- a/SS_lab4.ipynb
+++ b/SS_lab4.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMt8STExxqNalzSyccoZb1d",
+      "authorship_tag": "ABX9TyNKb0T/etLQJJ/AYIyAhWDm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -318,6 +318,7 @@
         "import torch\r\n",
         "from torch import nn\r\n",
         "import torch.optim as optim\r\n",
+        "from time import time\r\n",
         "\r\n",
         "from torch.utils.data import Dataset\r\n",
         "from torch.utils.data import DataLoader"
@@ -480,148 +481,13 @@
         "id": "M05-bRfOLxZ_"
       },
       "source": [
-        "batch_size = 32"
+        "batch_size = 32\r\n",
+        "\r\n",
+        "train_loader = DataLoader(PhonemeDataset(X_train[:(-1)*(len(y_train) % batch_size)], y_train[:(-1)*(len(y_train) % batch_size)]), batch_size=batch_size)\r\n",
+        "test_loader = DataLoader(PhonemeDataset(X_test, y_test), batch_size=1)"
       ],
       "execution_count": 21,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "erXW-_Zt2KH4"
-      },
-      "source": [
-        "train_loader = DataLoader(PhonemeDataset(X_train[:(-1)*(len(y_train) % batch_size)], y_train[:(-1)*(len(y_train) % batch_size)]), batch_size=batch_size)\r\n",
-        "#test_loader = DataLoader(PhonemeDataset(X_test[:(-1)*(len(y_test) % 32)], y_test[:(-1)*(len(y_test) % 32)]), batch_size=batch_size)"
-      ],
-      "execution_count": 22,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "d1ExLGfcEknY"
-      },
-      "source": [
-        "test_loader = DataLoader(PhonemeDataset(X_test, y_test), batch_size=1)"
-      ],
-      "execution_count": 23,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "_dPshcoPBrLK",
-        "outputId": "d465570f-e3c3-4e1c-bcf0-bb35e4915576"
-      },
-      "source": [
-        "len(y_test[:(-1)*(len(y_test) % 32)])"
-      ],
-      "execution_count": 110,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "6560"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 110
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "KeTctByA378k"
-      },
-      "source": [
-        "for wavs, labs in train_loader:\r\n",
-        "    print(wavs)\r\n",
-        "    #wavs, labs = wavs.cuda(), labs.detach().numpy()\r\n",
-        " \r\n",
-        "    #outputs = outputs.detach().cpu().numpy().argmax(axis=1)\r\n",
-        "    #forecast.append(outputs)\r\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "abiZDQxlhduk",
-        "outputId": "f050777e-6255-4af0-9c47-c2bba4499cba"
-      },
-      "source": [
-        "from time import time\r\n",
-        "\r\n",
-        "epochs = 20\r\n",
-        "##batches = 100\r\n",
-        "generator = Generator(19, [64, 32, 12]) # X_train.shape[1] , y_train.shape[1]\r\n",
-        "discriminator = Discriminator(12, [64, 32, 1])\r\n",
-        "##noise_fn = lambda x: torch.rand((x, 19), device='cuda') ######## < --------------\r\n",
-        "##data_fn = lambda x: torch.randn((x, 12), device='cuda') ######## < --------------\r\n",
-        "##gan = VanillaGAN(generator, discriminator, noise_fn, data_fn, device='cuda')\r\n",
-        "gan = VanillaGAN(generator, discriminator, batch_size, device='cuda')\r\n",
-        "loss_g, loss_d_real, loss_d_fake = [], [], []\r\n",
-        "start = time()\r\n",
-        "for epoch in range(epochs):\r\n",
-        "    count_batches = 0\r\n",
-        "    loss_g_running, loss_d_real_running, loss_d_fake_running = 0, 0, 0\r\n",
-        "    #for batch in range(batches):\r\n",
-        "    for features, labels in train_loader:\r\n",
-        "        features, labels = features.cuda(), labels.cuda()\r\n",
-        "        lg_, (ldr_, ldf_) = gan.train_step(features.float(), labels.float())\r\n",
-        "        loss_g_running += lg_\r\n",
-        "        loss_d_real_running += ldr_\r\n",
-        "        loss_d_fake_running += ldf_\r\n",
-        "        count_batches += 1\r\n",
-        "    loss_g.append(loss_g_running / count_batches)\r\n",
-        "    loss_d_real.append(loss_d_real_running / count_batches)\r\n",
-        "    loss_d_fake.append(loss_d_fake_running / count_batches)\r\n",
-        "    print(f\"Epoch {epoch+1}/{epochs} ({int(time() - start)}s):\"\r\n",
-        "          f\" G={loss_g[-1]:.3f},\"\r\n",
-        "          f\" Dr={loss_d_real[-1]:.3f},\"\r\n",
-        "          f\" Df={loss_d_fake[-1]:.3f}\")"
-      ],
-      "execution_count": 28,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Epoch 1/20 (171s): G=4.506, Dr=0.368, Df=0.352\n",
-            "Epoch 2/20 (343s): G=0.962, Dr=0.627, Df=0.583\n",
-            "Epoch 3/20 (514s): G=0.983, Dr=0.618, Df=0.563\n",
-            "Epoch 4/20 (685s): G=0.949, Dr=0.624, Df=0.571\n",
-            "Epoch 5/20 (855s): G=0.988, Dr=0.613, Df=0.552\n",
-            "Epoch 6/20 (1025s): G=0.971, Dr=0.618, Df=0.563\n",
-            "Epoch 7/20 (1195s): G=0.960, Dr=0.622, Df=0.571\n",
-            "Epoch 8/20 (1367s): G=0.971, Dr=0.618, Df=0.560\n",
-            "Epoch 9/20 (1536s): G=0.960, Dr=0.621, Df=0.567\n",
-            "Epoch 10/20 (1706s): G=0.908, Dr=0.636, Df=0.590\n",
-            "Epoch 11/20 (1874s): G=0.931, Dr=0.629, Df=0.577\n",
-            "Epoch 12/20 (2044s): G=0.919, Dr=0.632, Df=0.582\n",
-            "Epoch 13/20 (2213s): G=0.933, Dr=0.629, Df=0.578\n",
-            "Epoch 14/20 (2383s): G=0.932, Dr=0.630, Df=0.582\n",
-            "Epoch 15/20 (2554s): G=0.940, Dr=0.625, Df=0.573\n",
-            "Epoch 16/20 (2724s): G=0.919, Dr=0.632, Df=0.581\n",
-            "Epoch 17/20 (2895s): G=0.902, Dr=0.636, Df=0.588\n",
-            "Epoch 18/20 (3064s): G=0.895, Dr=0.638, Df=0.593\n",
-            "Epoch 19/20 (3234s): G=0.899, Dr=0.637, Df=0.595\n",
-            "Epoch 20/20 (3403s): G=0.910, Dr=0.635, Df=0.587\n"
-          ],
-          "name": "stdout"
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -633,15 +499,9 @@
         "outputId": "bb416511-b4d0-439b-e400-61217b81d9f4"
       },
       "source": [
-        "from time import time\r\n",
-        "\r\n",
         "epochs = 20\r\n",
-        "##batches = 100\r\n",
-        "generator = Generator(19, [64, 32, 12]) # X_train.shape[1] , y_train.shape[1]\r\n",
-        "discriminator = Discriminator(12, [64, 32, 1])\r\n",
-        "##noise_fn = lambda x: torch.rand((x, 19), device='cuda') ######## < --------------\r\n",
-        "##data_fn = lambda x: torch.randn((x, 12), device='cuda') ######## < --------------\r\n",
-        "##gan = VanillaGAN(generator, discriminator, noise_fn, data_fn, device='cuda')\r\n",
+        "generator = Generator(X_train.shape[1], [64, 32, y_train.shape[1]]) # X_train.shape[1] = 19 , y_train.shape[1] = 12\r\n",
+        "discriminator = Discriminator(y_train.shape[1], [64, 32, 1])\r\n",
         "gan = VanillaGAN(generator, discriminator, batch_size, device='cuda')\r\n",
         "loss_g, loss_d_real, loss_d_fake = [], [], []\r\n",
         "start = time()\r\n",
@@ -704,6 +564,8 @@
         "outputId": "ff95b773-2116-45b5-8bfb-56eb85502357"
       },
       "source": [
+        "# Пример генерации вектора\r\n",
+        "\r\n",
         "gan.generate_samples(torch.tensor((0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18), dtype=torch.float, device='cuda'), 1)"
       ],
       "execution_count": 88,
@@ -726,6 +588,24 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "q_zBvNcREYsy"
+      },
+      "source": [
+        "from numpy import linalg\r\n",
+        "\r\n",
+        "def show_metric(y_pred, y_true):\r\n",
+        "    L2_score = []\r\n",
+        "    for i in range(len(y_pred)):\r\n",
+        "        L2_score.append(np.linalg.norm(y_pred[i] - y_true[i]))\r\n",
+        "\r\n",
+        "    print('\\nEuclidean distance:\\t%0.3f' % np.mean(L2_score))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
@@ -733,6 +613,8 @@
         "outputId": "3767fd5c-9b1b-4b59-a4b7-971c469b8867"
       },
       "source": [
+        "# Оценка работы GAN\r\n",
+        "\r\n",
         "y_true = []\r\n",
         "y_pred = []\r\n",
         "\r\n",
@@ -768,6 +650,8 @@
         "outputId": "bc6b2931-5fb2-44c0-c67d-0273edec081e"
       },
       "source": [
+        "# Пример исходного и предсказанного вектора\r\n",
+        "\r\n",
         "print(y_true[0])\r\n",
         "print(y_pred[0])"
       ],
@@ -786,45 +670,12 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ZTA2N0CUhdmi"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "yLpw8H8zhdjc"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "FnRyIfGEunRi"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "yDR5KYsIZqBm"
       },
       "source": [
-        "## Классификаторы"
+        "## Регрессионная модель"
       ]
     },
     {
@@ -842,84 +693,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BANG5glggz5w"
-      },
-      "source": [
-        "from sklearn.tree import DecisionTreeClassifier\n",
-        "from sklearn.ensemble import RandomForestClassifier\n",
-        "from sklearn.naive_bayes import GaussianNB\n",
-        "from sklearn.linear_model import LogisticRegression\n",
-        "from sklearn.linear_model import LinearRegression\n",
-        "\n",
-        "from sklearn.model_selection import cross_val_score\n",
-        "from sklearn import metrics\n",
-        "import matplotlib.pyplot as plt\n",
-        "import pandas as pd\n",
-        "\n",
-        "from numpy import linalg"
-      ],
-      "execution_count": 13,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ypKbZzg5f0fu"
-      },
-      "source": [
-        "import numpy as np\r\n",
-        "from sklearn import linear_model\r\n",
-        "from sklearn import svm\r\n",
-        "\r\n",
-        "classifiers = [\r\n",
-        "    svm.SVR(),\r\n",
-        "    linear_model.SGDRegressor(),\r\n",
-        "    linear_model.BayesianRidge(),\r\n",
-        "    linear_model.LassoLars(),\r\n",
-        "    linear_model.ARDRegression(),\r\n",
-        "    linear_model.PassiveAggressiveRegressor(),\r\n",
-        "    linear_model.TheilSenRegressor(),\r\n",
-        "    linear_model.LinearRegression()]"
-      ],
-      "execution_count": 14,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Z4yeqyJ2dn5b",
-        "outputId": "5f157e30-8001-4ec4-993c-64eae7deaf04"
-      },
-      "source": [
-        "a = np.array([[1, 1, 1], [2, 2, 2]])\r\n",
-        "print(a)\r\n",
-        "print(a.T)"
-      ],
-      "execution_count": 54,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[[1 1 1]\n",
-            " [2 2 2]]\n",
-            "[[1 2]\n",
-            " [1 2]\n",
-            " [1 2]]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "KLqcXG-7njFq"
       },
       "source": [
-        "#def fit_clf(clf, X_train, y_train):\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "\n",
         "def fit_clf(X_train, y_train):\n",
         "    \n",
         "    n_clf = y_train.shape[1]\n",
@@ -932,51 +710,17 @@
         "    \n",
         "    return clfs\n",
         "\n",
-        "def predict_clf(clfs, X_test, y_test, metric='micro'):\n",
-        "    \n",
-        "    y_pred = []\n",
         "\n",
+        "def predict_clf(clfs, X_test, y_test, metric='micro'):    \n",
+        "    y_pred = []\n",
         "    for i in range(len(clfs)):\n",
         "        y_pred.append(clfs[i].predict(X_test))\n",
         "\n",
-        "    #print(len(y_pred), len(y_pred[0]))\n",
         "    y_pred = np.asarray(y_pred).T\n",
-        "    #print(y_pred[0])\n",
         "\n",
         "    show_metric(y_pred, y_test)\n",
         "\n",
-        "    #print('\\nConfusion matrix:\\n', pd.DataFrame(metrics.confusion_matrix(y_test, y_pred)))\n",
-        "\n",
-        "    #metrics.plot_confusion_matrix(clf, X_test, y_test, values_format='d')\n",
-        "    #plt.show()\n",
-        "\n",
-        "    return y_pred\n",
-        "\n",
-        "\n",
-        "def show_metric(y_pred, y_true):\n",
-        "\n",
-        "\n",
-        "\n",
-        "    L2_score = []\n",
-        "\n",
-        "    for i in range(len(y_pred)):\n",
-        "        L2_score.append(np.linalg.norm(y_pred[i] - y_true[i]))\n",
-        "\n",
-        "    #print(pred, true)\n",
-        "\n",
-        "    #print(metrics.classification_report(true, pred))\n",
-        "\n",
-        "    #lev_score.append(Levenshtein.distance(out, true))\n",
-        "    \n",
-        "\n",
-        "    #print('F1-score (%s):\\t%0.3f' % (metric, metrics.f1_score(y_true, y_pred, average=metric)))\n",
-        "    #print('F1-score (%s):\\t%0.3f' % (metric, metrics.f1_score(y_true, y_pred, average=metric)))\n",
-        "    #print('Recall (%s): \\t%0.3f' % (metric, metrics.recall_score(y_true, y_pred, average=metric)))\n",
-        "    #print('Precision (%s):\\t%0.3f' % (metric,metrics.precision_score(y_true, y_pred, average=metric)))\n",
-        "    #print('Accuracy:\\t\\t%0.3f' % metrics.accuracy_score(y_true, y_pred))\n",
-        "    print('\\nEuclidean distance:\\t%0.3f' % np.mean(L2_score))\n",
-        "\n",
-        "    # np.linalg.norm(x-y)\n"
+        "    return y_pred"
       ],
       "execution_count": 41,
       "outputs": []
@@ -991,10 +735,8 @@
         "outputId": "07739708-795e-4454-8ec2-9a22e08612d3"
       },
       "source": [
-        "#lr = LinearRegression()\r\n",
-        "\r\n",
         "lrs = fit_clf(X_train, y_train)\r\n",
-        "y_pred = predict_clf(lrs, X_test, y_test) #'weighted'"
+        "y_pred = predict_clf(lrs, X_test, y_test)"
       ],
       "execution_count": 43,
       "outputs": [
@@ -1011,17 +753,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZKPAPVMn0OVN"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
@@ -1029,6 +760,8 @@
         "outputId": "4fd1e83d-2ee0-4fdc-c6a8-a7b3584de2e7"
       },
       "source": [
+        "# Пример исходного и предсказанного вектора\r\n",
+        "\r\n",
         "print(y_test[0])\r\n",
         "print(y_pred[0])"
       ],
@@ -1045,67 +778,6 @@
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "NcIdmfe7g4D_"
-      },
-      "source": [
-        "from sklearn import linear_model\r\n",
-        "from sklearn import svm"
-      ],
-      "execution_count": 65,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_j8c3Jf4unJ9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "241cb99a-e865-430f-f06e-fb1ea79e1b68"
-      },
-      "source": [
-        "svc = linear_model.SGDRegressor()\r\n",
-        "\r\n",
-        "svcs = fit_clf(svc, X_train, y_train)\r\n",
-        "y_pred = predict_clf(svcs, X_test, y_test) #'weighted'"
-      ],
-      "execution_count": 67,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "Euclidean distance:\t557722936138315.750\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "t5ibjcPiunHK"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "tOJMrgtwzNa3"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
